--- a/index.html
+++ b/index.html
@@ -296,5 +296,22 @@
       nav.classList.toggle("show");
     }
   </script>
+  <!-- WhatsApp Chat Button -->
+<a href="https://wa.me/2348169997543" class="whatsapp-float" target="_blank">
+  <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="Chat with us on WhatsApp">
+</a>
+
+<style>
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+  }
+  .whatsapp-float img {
+    width: 60px;
+    height: 60px;
+  }
+</style>
 </body>
 </html>
