--- a/index.html
+++ b/index.html
@@ -276,7 +276,6 @@
     <p><strong>Location:</strong> Ahmadu Bello Way, T-Junction, Mubi North, Adamawa State</p>
     <p><strong>Email:</strong> <a href="mailto:nextrivetechnologies@gmail.com">nextrivetechnologies@gmail.com</a></p>
     <p><strong>Phone:</strong> 08169997543, 08168472591</p>
-    <p><strong>WhatsApp:</strong> <a href="https://wa.me/2348169997543" target="_blank">Chat with us</a></p>
 
     <form class="contact-form" action="https://formsubmit.co/nextrivetechnologies@gmail.com" method="POST">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -297,7 +296,7 @@
     }
   </script>
   <!-- WhatsApp Chat Button -->
-<a href="https://wa.me/2348169997543" class="whatsapp-float" target="_blank">
+<a href="https://wa.me/2348169997543" class="whatsapp-float" target="Hi">
   <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="Chat with us on WhatsApp">
 </a>
 
